prevent overflow of banner video

--- a/_sass/banner-video.scss
+++ b/_sass/banner-video.scss
@@ -1,3 +1,7 @@
+#masthead {
+    overflow: clip;
+}
+
 #banner-video {
     position: absolute;
     top: 0;
